@@ -1,3 +1,9 @@
+2023-02-05 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3547.c:
+	  Fix bug #3547.
+
 2023-02-04 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCerr.h,
